@@ -104,10 +104,12 @@ static GstStaticPadTemplate gst_dtdriver_sink_factory =
 GST_STATIC_PAD_TEMPLATE("sink",
     GST_PAD_SINK,
     GST_PAD_ALWAYS,
-    GST_STATIC_CAPS("audio/mpeg, mpegversion=(int) 1, "
+    GST_STATIC_CAPS("audio/mpeg, mpegversion=(int) { 1, 2, 4 }, "
         "layer = (int) [ 1, 3 ], "
         "rate = (int) { 8000, 11025, 12000, 16000, 22050, 24000, 32000, 44100, 48000 }, "
-        "channels = (int) [ 1, 2 ]; audio/x-m4a")
+        "channels = (int) [ 1, 2 ] ;"
+        "audio/x-m4a"
+    )
 );
 
 static void gst_dtdriver_base_init(gpointer g_class)
